--- a/chat/src/main/resources/public/index.html
+++ b/chat/src/main/resources/public/index.html
@@ -10,7 +10,8 @@
     <input id="message" placeholder="Type your message">
     <button id="send">Send</button>
 </div>
-<ul id="channellist"></ul>
+<ul id="channellist">
+</ul>
 <ul id="userlist"> <!-- Built by JS --> </ul>
 <div id="chat">    <!-- Built by JS --> </div>
 
